# falling-sand-benchmarks

./: .gitmodules  LICENSE  README.md
opengl/: .gitignore  CMakeLists.txt  CMakePresets.json  instrucciones.txt
opengl/assets/shaders/: grid.fs.glsl  grid.vs.glsl  post_blur.fs.glsl  post_composite.fs.glsl  post_threshold.fs.glsl  vertex.glsl
opengl/include/: audio.h  engine.h  material.h  particle.h  renderer.h  ui.h  utils.h
opengl/src/: audio.cpp  engine.cpp  main.cpp  material.cpp  renderer.cpp  ui.cpp  utils.cpp
python/: instructions.txt  requirements.txt
python/saved/: allWood.txt  cleaned.txt  test1.txt  twoLogs.txt
python/src/: fallingSand.py
